Improve /storage/bucket request
